<resources>
    <string name="app_name">AlarmClock</string>
    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set">Set</string>
    <string name="zero_xero">00</string>
    <string name="pause">Pause</string>
    <string name="zero_zero">00</string>
    <string name="reset">Reset</string>
    <string name="m">m</string>
    <string name="s">s</string>
    <string name="_0">0</string>
    <string name="start">Start</string>
    <string name="zero_zero_zero">000</string>
    <string name="no_alarm_set">No alarm set</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="title_activity_alarm">Alarm</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="dismiss">Dismiss</string>
    <string name="_10_00">01:00</string>
    <string name="cancel">Cancel</string>
    <string name="_colon">:</string>
    <string name="_00_00">00:00</string>
    <string name="_0_00_000">0:00:000</string>
    <string name="mo">M</string>
</resources>