<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AlarmFrag">

    <TextView
        android:id="@+id/Al_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_alarm_set"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TimePicker
        android:id="@+id/Al_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:theme="@style/PickerTheme"
        android:timePickerMode="spinner" />

    <Button
        android:id="@+id/Al_set_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:text="@string/add_alarm" />

    <Button
        android:id="@+id/al_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</LinearLayout>